# hls4ml

./: .gitignore  Py2C.py  README.md  Tor2ker.py  convert.py  export_data.py  main.py  pyproject.toml  quantize.py  remove_dropout.py  utils.py
cpp/: model.h  test_data.h
dump_results/dump_results_weights/: quant_dense_0_bias.txt  quant_dense_0_kernel.txt  quant_dense_1_bias.txt  quant_dense_1_kernel.txt  quant_dense_2_bias.txt  quant_dense_2_kernel.txt  quant_dense_3_bias.txt  quant_dense_3_kernel.txt
examples/: mlp.py
hls/: CNN.cpp  CNN.h  CNN_tb.cpp  Conv.cpp  Conv.h  Dense.cpp  Dense.h  Float_Weights.txt  Pool.cpp  Pool.h  X.txt  Y.txt
model2hls/: exporter.py  quantizer.py
model2hls/layers/: base.py  dense.py
model2hls/model/: model.py
workspace/: util.py  utils.py
workspace/cpp/: DataPack.h  MLP.cpp  MLP.h  MLP_tb.c  MLP_tb.cpp  model.h
workspace/dump_results/dump_results_0/: dense_3_softmax_float.txt  input_1_float.txt  quant_dense_1_float.txt  quant_dense_1_relu.txt  quant_dense_1_relu_float.txt  quant_dense_2_float.txt  quant_dense_2_relu.txt  quant_dense_2_relu_float.txt  quant_dense_3.txt  quant_dense_3_float.txt  quant_dense_float.txt  quant_dense_relu.txt  quant_dense_relu_float.txt  quant_input_1.txt  quant_input_1_float.txt
workspace/dump_results/dump_results_weights/: quant_dense_0_bias.txt  quant_dense_0_kernel.txt  quant_dense_1_bias.txt  quant_dense_1_kernel.txt  quant_dense_2_bias.txt  quant_dense_2_kernel.txt  quant_dense_3_bias.txt  quant_dense_3_kernel.txt  quant_dense_4_bias.txt  quant_dense_4_kernel.txt  quant_dense_6_bias.txt  (+1 more)
