[tool.poetry]
name = "model2hls"
version = "1.0.1"
description = "A lightweight Python package to convert neural network models into Vitis/Vivado HLS C/C++ code."
authors = ["Minh Doan doanminh750@gmail.com"]
readme = "README.md"
license = "MIT"
packages = [{ include = "model2hls" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.0"
jinja2 = "^3.1.0"

tensorflow = { version = "^2.13.0", optional = true }
onnx = { version = "^1.14.0", optional = true }

[tool.poetry.extras]
tensorflow = ["tensorflow"]
onnx = ["onnx"]
all = ["tensorflow", "onnx"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
model2hls = "model2hls.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"